<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>dk.ku.di.dms.vms</groupId>
  <artifactId>vms-runtime-java</artifactId>
  <packaging>pom</packaging>
  <version>1.0-SNAPSHOT</version>
  <description>A runtime for execution of virtual microservices written in Java</description>

  <modules>

    <!-- modb -->
    <module>modb</module>
    <module>modb-api</module>
    <module>modb-common</module>

    <!-- sdk -->
    <module>sdk-embed</module>
    <module>sdk-core</module>

    <!-- general -->
    <module>web_common</module>

    <!-- operations -->
    <module>coordinator</module>

    <!-- marketplace -->
    <module>marketplace</module>

  </modules>

  <name>vms-runtime-java</name>
  <url>https://rnlaigner.github.io/vms</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <java.version>21</java.version>
    <maven.compiler.source>${java.version}</maven.compiler.source>
    <maven.compiler.target>${java.version}</maven.compiler.target>

    <!-- dependency versions -->
    <junit.version>4.13.2</junit.version>
    <slf4j.version>2.0.5</slf4j.version>
  </properties>

  <dependencies>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>

    <!-- Logging. Required by junit. could change to a custom-built one -->
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>${slf4j.version}</version>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-nop</artifactId>
      <version>2.0.11</version>
    </dependency>

  </dependencies>

  <build>

    <pluginManagement>
      <plugins>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.7.0</version>
          <configuration>
            <source>${java.version}</source>
            <target>${java.version}</target>
            <compilerArgs>
              <!-- for memory segment support -->
              <arg>--enable-preview</arg>
              <!-- for unsafe support -->
              <arg>--add-exports</arg>
              <arg>java.base/jdk.internal.misc=ALL-UNNAMED</arg>
              <arg>--add-opens</arg>
              <arg>java.base/jdk.internal.misc=ALL-UNNAMED</arg>
            </compilerArgs>
          </configuration>
        </plugin>

        <!-- prevent tests from running when building the solution -->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.2.5</version>
          <configuration>
            <skipTests>true</skipTests>
          </configuration>
        </plugin>

      </plugins>

    </pluginManagement>
  </build>

  <developers>
    <developer>
      <id>rodrigolaigner</id>
      <name>Rodrigo Laigner</name>
      <url>https://github.com/rnlaigner</url>
      <email>rnl@di.ku.dk</email>
    </developer>
  </developers>

</project>